gac_sb/objects/Prevision_de_facturation__c.object
<CustomObject>
    <fields>
        <fullName>Motifs__c</fullName>
        <label>Motif</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>1518 B</fullName>
                </value>
                <value>
                    <fullName>Abattement</fullName>
                </value>
                <value>
                    <fullName>À définir</fullName>
                </value>
                <value>
                    <fullName>Ajust</fullName>
                </value>
                <value>
                    <fullName>Assistance contrôle</fullName>
                </value>
                <value>
                    <fullName>Assistance décla</fullName>
                </value>
                <value>
                    <fullName>Aucun évènement</fullName>
                </value>
                <value>
                    <fullName>Autres cas - 10%</fullName>
                </value>
                <value>
                    <fullName>Autres cas - 50%</fullName>
                </value>
                <value>
                    <fullName>Autres cas - 90%</fullName>
                </value>
                <value>
                    <fullName>Bâtiment inachevé</fullName>
                </value>
                <value>
                    <fullName>calcul CVAE</fullName>
                </value>
                <value>
                    <fullName>cession locaux nus</fullName>
                </value>
                <value>
                    <fullName>chgt affectation U-C</fullName>
                </value>
                <value>
                    <fullName>chgt affectation U-US</fullName>
                </value>
                <value>
                    <fullName>CI TP</fullName>
                </value>
                <value>
                    <fullName>Décharge</fullName>
                </value>
                <value>
                    <fullName>Démolition sur décision du juge</fullName>
                </value>
                <value>
                    <fullName>Ecretement transit.</fullName>
                </value>
                <value>
                    <fullName>erreur calcul VL TF/CFE</fullName>
                </value>
                <value>
                    <fullName>Erreur de calcul de la taxe</fullName>
                </value>
                <value>
                    <fullName>Eval CB</fullName>
                </value>
                <value>
                    <fullName>EXO 2AFR</fullName>
                </value>
                <value>
                    <fullName>EXO ENT. Saisonnière</fullName>
                </value>
                <value>
                    <fullName>Exonération</fullName>
                </value>
                <value>
                    <fullName>EXO ZRR</fullName>
                </value>
                <value>
                    <fullName>Intérêts moratoires</fullName>
                </value>
                <value>
                    <fullName>LT</fullName>
                </value>
                <value>
                    <fullName>Pas de motif</fullName>
                </value>
                <value>
                    <fullName>Pas de suite donnée au PC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nature_de_accord__c</fullName>
        <label>Nature de l&apos;accord</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CRA</fullName>
                </value>
                <value>
                    <fullName>TCI</fullName>
                </value>
                <value>
                    <fullName>CNITAT</fullName>
                </value>
                <value>
                    <fullName>CARSAT</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CPAM</fullName>
                </value>
                <value>
                    <fullName>TASS</fullName>
                </value>
                <value>
                    <fullName>Cour de cassation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nature_de_la_decision_reclamation__c</fullName>
        <description>Nature de la décision</description>
        <inlineHelpText>Nature de la décision</inlineHelpText>
        <label>Nature de la décision réclamation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Admission partielle de la réclamation</fullName>
                </value>
                <value>
                    <fullName>Rejet de la réclamation</fullName>
                </value>
                <value>
                    <fullName>Admission totale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nature_facturation__c</fullName>
        <inlineHelpText>Va permettre le pré-remplissage du contenu de la facture</inlineHelpText>
        <label>Nature facturation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Avoir</fullName>
                </value>
                <value>
                    <fullName>Regul</fullName>
                </value>
                <value>
                    <fullName>Facturation avec estimation</fullName>
                </value>
                <value>
                    <fullName>Facturation avec tous les éléments</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <inlineHelpText>(Hors délai)</inlineHelpText>
        <label>Office</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Periode_debut__c</fullName>
        <label>Période début</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Periode_fin__c</fullName>
        <label>Période fin</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Perte_d_honoraire__c</fullName>
        <formula>IF( 
HGNF_comptabilise__c=TRUE,
Prevision_HT__c-Montant_HGNF__c  ,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gain / Perte d&apos;honoraire</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phase_avancement_Inno_AD__c</fullName>
        <formula>TEXT(ValoINNOadvance__r.MissionCIR__r.Phase__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phase avancement (Inno-AD)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pole__c</fullName>
        <formula>CASE(RecordType.DeveloperName, &apos;CIR&apos;,&apos;Inno&apos;,&apos;DI&apos;,&apos;Inno&apos;,&apos;FI&apos;,&apos;Inno&apos;,&apos;CIN&apos;,&apos;Inno&apos;,&apos;ACS&apos;,&apos;Perf RH&apos;,&apos;CRH&apos;,&apos;Perf RH&apos;,&apos;TAT&apos;,&apos;Perf RH&apos;,&apos;IL&apos;,&apos;Perf Financière&apos;,&apos;CFI&apos;,&apos;Perf Financière&apos;,&apos;VEILLE&apos;,&apos;Inno&apos;,&apos;#&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pôle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ponderation_de_la_planification__c</fullName>
        <label>Pondération de la planification</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pourcentage_Factur__c</fullName>
        <label>Pourcentage Facturé</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pourcentage_sur_CA_Total__c</fullName>
        <description>% sur CA Total = Prévision HT (de la planification) Divisé par CA total (de la mission). On doit avoir un résultat en %</description>
        <formula>IF( Mission__r.CA_Total__c  &lt;&gt; 0,
  IF(Prevision_HT__c  &lt;&gt; 0,
     Prevision_HT__c  /  Mission__r.CA_Total__c, 0),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>% sur CA Total = Prévision HT (de la planification) Divisé par CA total (de la mission). On doit avoir un résultat en %</inlineHelpText>
        <label>% sur CA Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Prescription_URSSAF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prescription URSSAF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prestataire__c</fullName>
        <label>Prestataire</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Arbor</fullName>
                </value>
                <value>
                    <fullName>Aucun</fullName>
                </value>
                <value>
                    <fullName>Autre</fullName>
                </value>
                <value>
                    <fullName>Forskel</fullName>
                </value>
                <value>
                    <fullName>FT</fullName>
                </value>
                <value>
                    <fullName>MP Ressource</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prestataire_comptabilise_paye__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prestataire comptabilisé/payé</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prevision_HT_GAC__c</fullName>
        <formula>Prevision_HT__c - Prevision_HT_Prestataire__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prévision HT GAC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prevision_HT_Prestataire__c</fullName>
        <formula>Prevision_HT__c * percent_Prestation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prévision HT Prestataire</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prevision_HT__c</fullName>
        <label>Prévision HT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prevision_basse__c</fullName>
        <label>Prévision basse</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prevision_haute__c</fullName>
        <label>Prévision haute</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Produit__c</fullName>
        <label>Produit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Absentéisme</fullName>
                </value>
                <value>
                    <fullName>Aide à domicile</fullName>
                </value>
                <value>
                    <fullName>Autres</fullName>
                </value>
                <value>
                    <fullName>Avantages en nature</fullName>
                </value>
                <value>
                    <fullName>Contrats particuliers</fullName>
                </value>
                <value>
                    <fullName>Contrôle URSSAF</fullName>
                </value>
                <value>
                    <fullName>Crédit d&apos;impôt</fullName>
                </value>
                <value>
                    <fullName>Exos territoriales</fullName>
                </value>
                <value>
                    <fullName>FNAL</fullName>
                </value>
                <value>
                    <fullName>Forfait social</fullName>
                </value>
                <value>
                    <fullName>Frais professionnels</fullName>
                </value>
                <value>
                    <fullName>Réduction Fillon</fullName>
                </value>
                <value>
                    <fullName>Salariés particuliers</fullName>
                </value>
                <value>
                    <fullName>Taxe handicapés</fullName>
                </value>
                <value>
                    <fullName>Taxes parafiscales</fullName>
                </value>
                <value>
                    <fullName>Taxe sur les salaires</fullName>
                </value>
                <value>
                    <fullName>Versement de transport</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Produit_tat__c</fullName>
        <label>Produit TAT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AT-ADVANCE</fullName>
                </value>
                <value>
                    <fullName>RISK PRO ONLINE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Projet_Concept__c</fullName>
        <label>Projet / Concept</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Projet_europ_ens__c</fullName>
        <label>Projet européens</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>H2020 - Collaborative Projects/Large</fullName>
                </value>
                <value>
                    <fullName>H202 - Collaborative Projects/Small</fullName>
                </value>
                <value>
                    <fullName>H2020 - Individual Projects/MC/ERC</fullName>
                </value>
                <value>
                    <fullName>Eurostars/Eranets</fullName>
                </value>
                <value>
                    <fullName>Otros</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proyecto_Concepto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proyecto / Concepto</label>
        <referenceTo>Proyecto_Concepto__c</referenceTo>
        <relationshipLabel>Planifications de facturation</relationshipLabel>
        <relationshipName>Planifications_de_facturation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recours_gagne__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recours gagné</label>
        <referenceTo>AppATrecours__c</referenceTo>
        <relationshipLabel>Planifications de facturation</relationshipLabel>
        <relationshipName>Planifications_de_facturation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Saisie_du_TA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Saisine du TA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sous_produit__c</fullName>
        <inlineHelpText>Dépend du produit</inlineHelpText>
        <label>Sous-produit</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Produit__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Agents recenseurs</fullName>
                </value>
                <value>
                    <fullName>Allocataires études</fullName>
                </value>
                <value>
                    <fullName>Animateurs</fullName>
                </value>
                <value>
                    <fullName>Apprentis</fullName>
                </value>
                <value>
                    <fullName>Apprentissage</fullName>
                </value>
                <value>
                    <fullName>Arrondi</fullName>
                </value>
                <value>
                    <fullName>Article 700</fullName>
                </value>
                <value>
                    <fullName>Association</fullName>
                </value>
                <value>
                    <fullName>Assujettissement progressif</fullName>
                </value>
                <value>
                    <fullName>Autres</fullName>
                </value>
                <value>
                    <fullName>BER</fullName>
                </value>
                <value>
                    <fullName>Cantine</fullName>
                </value>
                <value>
                    <fullName>CNRACL</fullName>
                </value>
                <value>
                    <fullName>Compétitivité Emploi</fullName>
                </value>
                <value>
                    <fullName>Complément maladie / prev</fullName>
                </value>
                <value>
                    <fullName>Contestation</fullName>
                </value>
                <value>
                    <fullName>Contrat de professionnalisation</fullName>
                </value>
                <value>
                    <fullName>Contribution formation</fullName>
                </value>
                <value>
                    <fullName>CSG CRDS</fullName>
                </value>
                <value>
                    <fullName>DFS</fullName>
                </value>
                <value>
                    <fullName>Dispense d&apos;activité</fullName>
                </value>
                <value>
                    <fullName>ECAP</fullName>
                </value>
                <value>
                    <fullName>Famille</fullName>
                </value>
                <value>
                    <fullName>FNAL</fullName>
                </value>
                <value>
                    <fullName>FNAL à 0,1 %</fullName>
                </value>
                <value>
                    <fullName>Forfait jours</fullName>
                </value>
                <value>
                    <fullName>Formateurs occasionnels</fullName>
                </value>
                <value>
                    <fullName>Frais d&apos;entreprise</fullName>
                </value>
                <value>
                    <fullName>Gel des seuils</fullName>
                </value>
                <value>
                    <fullName>Heures d&apos;avenants</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Statut__c</fullName>
        <label>Statut</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Facturée</fullName>
                </value>
                <value>
                    <fullName>Prévue</fullName>
                </value>
                <value>
                    <fullName>HGNF</fullName>
                </value>
                <value>
                    <fullName>Rejetée</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Statut_facture__c</fullName>
        <description>Champ pour aider le récap de cumul a dire si la facture est émise ou non</description>
        <formula>TEXT(Facture__r.Statut__c)</formula>
        <label>Statut facture</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Statut_image__c</fullName>
        <formula>IMAGE(&apos;/resource/&apos; &amp; $Label.RessourceURLgraphicPack &amp; &apos;/GraphicsPack/16/fatcow/farmfresh/&apos; &amp; 
IF(ISPICKVAL(Statut__c, &apos;Rejetée&apos;),&apos;cancel&apos;,                    
IF(ISPICKVAL(Statut__c, &apos;HGNF&apos;),&apos;calculator&apos;,
IF(ISPICKVAL(Statut__c, &apos;Facturée&apos;), &apos;tick&apos;, &apos;calendar&apos;))) &amp;
&apos;.png&apos;, &apos;&apos; ) &amp; 
CASE(Statut__c,
     &apos;Facturée&apos;, &apos; (&apos;&amp; $Label.Statut_Factur_e&amp;&apos;)&apos; ,
     &quot;Prévue&quot;,  &apos; (&apos;&amp; $Label.Statut_pr_vue &amp;&apos;)&apos;,
     &quot;HGNF&quot;,&apos; (&apos;&amp; $Label.Statut_HGNF &amp;&apos;)&apos;,
     &quot;Rejetée&quot;,&apos; (&apos;&amp; $Label.Statut_Rejetee &amp;&apos;)&apos;,
     &apos;&apos;)</formula>
        <label>Statut</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subventions_nationales__c</fullName>
        <label>Subventions nationales</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>+ INNOVA 2013</fullName>
                </value>
                <value>
                    <fullName>AEESD</fullName>
                </value>
                <value>
                    <fullName>APOYO A LA INNOVACION</fullName>
                </value>
                <value>
                    <fullName>BASQUE INDUSTRY 4.0</fullName>
                </value>
                <value>
                    <fullName>BERRIKERTU</fullName>
                </value>
                <value>
                    <fullName>BIZKAIA CREATIVA</fullName>
                </value>
                <value>
                    <fullName>CDTI</fullName>
                </value>
                <value>
                    <fullName>CENTROS</fullName>
                </value>
                <value>
                    <fullName>DDFF</fullName>
                </value>
                <value>
                    <fullName>DFA</fullName>
                </value>
                <value>
                    <fullName>DFB</fullName>
                </value>
                <value>
                    <fullName>DFG</fullName>
                </value>
                <value>
                    <fullName>EEA GRANTS</fullName>
                </value>
                <value>
                    <fullName>Eficiencia energ</fullName>
                </value>
                <value>
                    <fullName>ELKARTEK</fullName>
                </value>
                <value>
                    <fullName>ETORGAI</fullName>
                </value>
                <value>
                    <fullName>EU</fullName>
                </value>
                <value>
                    <fullName>EUROPEOS</fullName>
                </value>
                <value>
                    <fullName>EVALUACIONES</fullName>
                </value>
                <value>
                    <fullName>EVE</fullName>
                </value>
                <value>
                    <fullName>FIJO MENSUAL</fullName>
                </value>
                <value>
                    <fullName>FIJO TRIMESTRAL</fullName>
                </value>
                <value>
                    <fullName>GAITEK</fullName>
                </value>
                <value>
                    <fullName>GAUZATU</fullName>
                </value>
                <value>
                    <fullName>GLOBAL LEHIAN</fullName>
                </value>
                <value>
                    <fullName>HAZITEK</fullName>
                </value>
                <value>
                    <fullName>I+D+I agrario</fullName>
                </value>
                <value>
                    <fullName>IKERTU</fullName>
                </value>
                <value>
                    <fullName>INDUSTRIA DIGITALA</fullName>
                </value>
                <value>
                    <fullName>INNCORPORA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Taxe__c</fullName>
        <label>Taxe</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TF</fullName>
                </value>
                <value>
                    <fullName>TP</fullName>
                </value>
                <value>
                    <fullName>CFE</fullName>
                </value>
                <value>
                    <fullName>CVAE</fullName>
                </value>
                <value>
                    <fullName>CET</fullName>
                </value>
                <value>
                    <fullName>TB</fullName>
                </value>
                <value>
                    <fullName>CITP</fullName>
                </value>
                <value>
                    <fullName>Aides-Subv</fullName>
                </value>
                <value>
                    <fullName>Assist décla</fullName>
                </value>
                <value>
                    <fullName>Assist vérif</fullName>
                </value>
                <value>
                    <fullName>TLE</fullName>
                </value>
                <value>
                    <fullName>TASCOMM</fullName>
                </value>
                <value>
                    <fullName>TH</fullName>
                </value>
                <value>
                    <fullName>TSB</fullName>
                </value>
                <value>
                    <fullName>Taxe d&apos;aménagement</fullName>
                </value>
                <value>
                    <fullName>Autre</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_d_avoir__c</fullName>
        <description>Ce champ n&apos;est à renseigner que si le montant de la planif est &lt; 0.</description>
        <inlineHelpText>Ce champ n&apos;est à renseigner que si le montant de la planif est &lt; 0.</inlineHelpText>
        <label>Type d&apos;avoir</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Non provisionné</fullName>
                </value>
                <value>
                    <fullName>Intégré en douteux</fullName>
                </value>
                <value>
                    <fullName>Intégré en prov. AAE N-1</fullName>
                </value>
                <value>
                    <fullName>Intégré en prov. AAE N</fullName>
                </value>
                <value>
                    <fullName>Intégré en prov. pour CF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_de_Pr_vision__c</fullName>
        <description>Champ de contrôle des prévisions canadiennes.</description>
        <label>Type de Prévision</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prévision de facturation</fullName>
                </value>
                <value>
                    <fullName>Prévision d&apos;HGNF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_facturation__c</fullName>
        <label>Type facturation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Au taux rectifié/simulé</fullName>
                </value>
                <value>
                    <fullName>A l&apos;accord non-contractuel</fullName>
                </value>
                <value>
                    <fullName>A l&apos;avis de crédit/remboursement URSSAF</fullName>
                </value>
                <value>
                    <fullName>Autres</fullName>
                </value>
                <value>
                    <fullName>A l&apos;accord</fullName>
                </value>
                <value>
                    <fullName>AT Advance</fullName>
                </value>
                <value>
                    <fullName>Risk Pro au forfait</fullName>
                </value>
                <value>
                    <fullName>Risk Pro au barême</fullName>
                </value>
                <value>
                    <fullName>A l&apos;accord avec régularisation MS n-1</fullName>
                </value>
                <value>
                    <fullName>A échoir</fullName>
                </value>
                <value>
                    <fullName>A échoir avec régularisation MS n-1</fullName>
                </value>
                <value>
                    <fullName>Forfait</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Typologie_CA_Forcee__c</fullName>
        <inlineHelpText>Permet de changer la valeur par défaut de la typologie CA pour gérer les cas particulier</inlineHelpText>
        <label>Typologie CA (Forcée)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Business</fullName>
                </value>
                <value>
                    <fullName>Stock</fullName>
                </value>
                <value>
                    <fullName>Pipe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Typologie_CA__c</fullName>
        <formula>IF((ISBLANK(Contrat__r.Date_de_reception_du_contrat_initial__c)),
	&apos;#&apos;, 
	IF( NOT(ISBLANK(TEXT(Typologie_CA_Forcee__c))),
		TEXT(Typologie_CA_Forcee__c), 
		IF(TEXT(Contrat__r.Type_de_contrat__c) = &apos;Premier contrat&apos; || TEXT(Contrat__r.Type_de_contrat__c) = &apos;Extension&apos; || TEXT(Contrat__r.Type_de_contrat__c) = &apos;Avenant à contrat en cours&apos;, 
			IF( (RecordType.DeveloperName = &apos;CIR&apos; || RecordType.DeveloperName = &apos;CIR_CANADA&apos;) ,
				/* Pour le CIR */
					IF(YEAR(Date_prevue__c) = YEAR(Contrat__r.Date_de_reception_du_contrat_initial__c),
						&apos;New Business&apos;, /* Si la planif est sur la meme année que la signature du contrat alors NB */
						IF(YEAR(Date_prevue__c) &gt; YEAR(Contrat__r.Date_de_reception_du_contrat_initial__c), /* si la planif est sur une année &gt; à celle du contrat */
							IF( OR(VALUE(TEXT(Mission__r.Annee_concernee__c)) &lt;= VALUE(Contrat__r.X1_ere_annee_de_mission_contrat_initial__c),ISBLANK(Contrat__r.X1_ere_annee_de_mission_contrat_initial__c)) ,
								&apos;Pipe&apos;, /* Si la planif est associée à la 1er année de mission */
								&apos;Stock&apos; /* Sinon la planif n&apos;est pas associée à la 1ere année de mission*/ 
							),
							&apos;#&apos; /* Si la planif est antérieur à l&apos;année de signature du contrat : Incohérent */
						)
					),
					/* Pour le reste */
					IF(YEAR(Date_prevue__c) = YEAR(Contrat__r.Date_de_reception_du_contrat_initial__c),
						&apos;New Business&apos;, /* Si la planif est sur la même année que la signature du contrat alors NB */
						IF(YEAR(Date_prevue__c) &gt; YEAR(Contrat__r.Date_de_reception_du_contrat_initial__c), /* si la planif est sur une année &gt; à celle du contrat */
							IF(RecordType.DeveloperName = &apos;TAT&apos;,
								&apos;Stock&apos;, /* C&apos;est du STOCK quoiqu&apos;il arrive */
								IF(YEAR(Date_prevue__c) = YEAR(Contrat__r.Date_1ere_planification__c),
									&apos;Pipe&apos;, /* Si la planif est (ou est sur la même année) que la 1ere facture */
									&apos;Stock&apos; /* Sinon la planif est sur une année supérieure à celle de la 1ere facture*/
								)
							),
							&apos;#&apos;
						)
					)
				)
			,&apos;Stock&apos;
		) 
	) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Typologie CA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Typologie_facturation__c</fullName>
        <inlineHelpText>Factu / Re-factu</inlineHelpText>
        <label>Typologie facturation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Facturation initiale</fullName>
                </value>
                <value>
                    <fullName>Avoir</fullName>
                </value>
                <value>
                    <fullName>Regul</fullName>
                </value>
                <value>
                    <fullName>Facturation avec estimation</fullName>
                </value>
                <value>
                    <fullName>Facturation avec tous les éléments</fullName>
                </value>
                <value>
                    <fullName>Re-facturation</fullName>
                </value>
                <value>
                    <fullName>Au forfait</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ValoINNOadvance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Valorisation INNO Advance</label>
        <referenceTo>INNOvalo__c</referenceTo>
        <relationshipLabel>Planifications de facturation</relationshipLabel>
        <relationshipName>PlanificationsFacturation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X40_livraison__c</fullName>
        <description>champ Canadien
40% de &apos;Honoraire à 100%&apos;</description>
        <formula>Honoraire_100__c *0.4</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>40% livraison</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>percent_Prestation__c</fullName>
        <label>% Prestation</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
</CustomObject>